2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	* include/ajax/agent.php: fixed the return of call ajax, now it haven't
	html entities.
	
	Fixes: #3174872

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	* ChangeLog: Change the number of item in tracker in previus commit. Sorry
	I have a mistake.  

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/agent_manager.php: fixed the return of ajax call to
	search parents, now the agent names is without html entities.
	
	Fixes: #3174918

2011-02-21  Sergio Martin <sergio.martin@artica.es>

	* include/functions_networkmap.php: Fixed the group maps
	when the root group has not agents. Bug: 3152679

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.elements.php: fixed the show
	icons for "label" and "icon", show tooltip on the type icons, hidde some
	fields as type of row. And now the image field show to icon type item and
	of course update too.
	
	Fixes: #3188080

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js: fixed the update the
	items, now don't change the position if the data haven't the position.
	
	Fixes: #3188069

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: added in function "get_group_agents" the
	parameter "$childGroups" for get the child groups. And in the function
	"get_user_groups" added the parameter "$id_groups" for to get groups. Add
	the function "get_id_groups_recursive" for to get groups in the tree groups.
	 
	* godmode/reporting/visual_console_builder.wizard.php: fixed the select box
	of agents when user have agents in subgroup in any subgroup in the tree
	group.
	
	Fixes: #3180902

2011-02-21 Javier Lanz <javier.lanz@artica.es>

	* godmode/alerts/alert_templates.php: Truncated Group name
	* godmode/alerts/alert_actions.php: Truncated Group name

2011-02-21  Ramon Novoa  <rnovoa@artica.es>
